# Skinning

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/jacob/skinning/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/PVRAssets/: CMakeLists.txt
app/src/main/cpp/PVRCore/: CMakeLists.txt
app/src/main/cpp/PVRGles/: CMakeLists.txt  RenderManager.cpp
app/src/main/cpp/PVRNativeGles/: CMakeLists.txt
app/src/main/cpp/PVRPlatformGlue/: CMakeLists.txt
app/src/main/cpp/PVRShell/: CMakeLists.txt
app/src/main/cpp/PVRUIRenderer/: CMakeLists.txt
app/src/main/java/com/example/jacob/skinning/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/jacob/skinning/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
